--- a/index.html
+++ b/index.html
@@ -1,44 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Task App 2023</title>
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link rel="stylesheet" href="main.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TODO LIST</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-	
-	<main>
-
-		<div class="app">
-
-			<header>
-				<h1>RyzerVisuals todolist</h1>
-				<button id="create">Add new todo</button>
-			</header>
-
-			<div class="todo-list" id="list">
-
-				<!-- <div class="item">
-					<input type="checkbox" />
-					<input 
-						type="text" 
-						value="Todo content goes here" 
-						disabled />
-					<div class="actions">
-						<button class="material-icons">edit</button>
-						<button class="material-icons remove-btn">remove_circle</button>
-					</div>
-				</div> -->
-
-			</div>
-
-		</div>
-
-	</main>
-
-	<script src="main.js"></script>
+  <div class="container">
+    <h1>Todo List</h1>
+    <div class="input-container">
+      <input class="todo-input" placeholder="Add a new task...">
+      <button class="add-button">
+        <i class="fa fa-plus-circle"></i>
+      </button>
+    </div>
+    <div class="filters">
+      <div class="filter" data-filter="completed">Complete</div>
+      <div class="filter" data-filter="pending">Incomplete</div>
+      <div class="delete-all">Delete All</div>
+    </div>
+    <div class="todos-container">
+      <ul class="todos"></ul>
+      <img class="empty-image" src="./empty.svg">
+    </div>
+  </div>
+  <script src="./script.js"></script>
 </body>
 </html>
